fix(grid): expand/collapse icon is not centered

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -77,7 +77,7 @@
         .k-group-col,
         .k-hierarchy-col {
             padding: 0;
-            width: 30px;
+            width: $icon-size*2;
         }
 
         .k-grouping-row p {
@@ -98,8 +98,8 @@
         }
 
         .k-grouping-row .k-icon {
-            margin-left: addTwo(-1*$cell-padding-x, 7px);
-            margin-right: 7px;
+            margin-left: addTwo(-1*$cell-padding-x, $icon-size/2);
+            margin-right: $icon-size/2;
         }
 
         .k-group-footer td {
